# back_to_basics

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
.agents/: kt_overview.md  kt_usage.md  kt_workflows.md
.agents/kt/: architecture.md  ast.md  environment.md  glossary.md  gpu_codegen.md  gpu_runtime.md  interpreter.md  lexer.md  parser.md
.agents/kt/implementations/: impl_basic_gpu_interpreter.md
.claude/: guardrails.md  session_init_primes.json
.claude/skills/kt-help/: SKILL.md
.claude/skills/kt-init/: SKILL.md
.claude/skills/kt-load/: SKILL.md
.claude/skills/kt-refactor/: SKILL.md
.claude/skills/kt-reflect/: SKILL.md
.claude/skills/kt-update/: SKILL.md
.claude/skills/kt-validate/: SKILL.md
.claude/skills/session-init/: SKILL.md
.claude/skills/update-cost-report/: SKILL.md
examples/: fibonacci.bas  guess.bas  heat.bas  hello.bas  vecadd.bas
src/: ast.h  environment.cpp  environment.h  gpu_codegen.cpp  gpu_codegen.h  gpu_runtime.cpp  gpu_runtime.h  interpreter.cpp  interpreter.h  lexer.cpp  lexer.h  main.cpp  mpi_runtime.cpp  mpi_runtime.h  parser.cpp  parser.h  token.h
tests/: ast_test.cpp  gpu_codegen_test.cpp  gpu_integration_test.cpp  gpu_parser_test.cpp  gpu_runtime_test.cpp  interpreter_test.cpp  lexer_test.cpp  mpi_interpreter_test.cpp  mpi_parser_test.cpp  mpi_runtime_test.cpp  parser_test.cpp  placeholder_test.cpp
tests/mpi/: barrier_sync.bas  ping_pong.bas  range_thru.bas  rank_size.bas  ring_exchange.bas  whole_array.bas
